--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -3,13 +3,12 @@
   <view class="userinfo">
     <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
     <block wx:else>
-      <image
-      bindtap="bindViewTap"
+      <image bindtap="bindViewTap"
       class="userinfo-avatar"
       src="{{userInfo.avatarUrl}}"
       mode="cover"
       >
-      </image bindtap="bindViewTap">
+      </image>
       <text class="userinfo-nickname">{{userInfo.nickName}}</text>
     </block>
   </view>
